--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -294,14 +294,13 @@
             border: none;
             color: white;
         }
-
     </style>
 </head>
 <body>
 <div class="main-container">
     <div class="top-row">
         <div class="basic-operations" id="basic-operations">Базовые операции <br> над функциями <button onclick="window.location.href='/tabulated-operations'">Создать</button></div>
-        <div class="complex-function" id="complex-function">Создание сложной <br> функции <button onclick="window.location.href='/tabulated-operations'">Создать</button></div>
+        <div class="complex-function" id="complex-function">Создание сложной <br> функции <button onclick="window.location.href='/composite'">Создать</button></div>
         <div class="plot-graph" id="plot-graph">Построение <br> графика <button onclick="window.location.href='/graph'">Построить</button></div>
     </div>
     <div class="bottom-row">
