--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -3,298 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .main-container {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            padding: 8px;
-        }
-
-        /* Верхняя строка */
-        .top-row {
-            display: grid;
-            grid-template-columns: 35% 35% 30%; /* Соотношение ширины столбцов */
-            gap: 8px;
-            grid-template-rows: 345px;
-        }
-
-        /* Нижняя строка */
-        .bottom-row {
-            display: grid;
-            grid-template-columns: 40% 30% 30%; /* Другое соотношение ширины столбцов */
-            gap: 8px;
-            grid-template-rows: 345px;
-        }
-
-        /* Общие стили для ячеек */
-        .top-row > div, .bottom-row > div {
-            position: relative;
-            background-color: #f0f0f0;
-            padding: 8px;
-            text-align: left;
-            border-radius: 10px;
-        }
-
-        /* Секция "Базовые операции над функциями" */
-        #basic-operations {
-            background-color: #ffe6f0;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-
-        }
-
-        #basic-operations button {
-            background-color: #ff66b3;
-            color: white;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px; /* Отступ справа */
-            transition: background-color 0.3s ease;
-        }
-
-        #basic-operations button:hover {
-            background-color: #e45ba0;
-        }
-
-        /* Секция "Создание сложной функции" */
-        #complex-function {
-            background-color: #ffe0b3;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-
-        #complex-function button {
-            background-color: #ff9933;
-            color: white;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px;
-            transition: background-color 0.3s ease;
-        }
-
-        #complex-function button:hover {
-            background-color: #df872d;
-        }
-
-        /* Секция "Построение графика" */
-        #plot-graph {
-            background-color: #ffe6f0;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-
-        #plot-graph button {
-            background-color: #ff66b3;
-            color: white;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px;
-            transition: background-color 0.3s ease;
-        }
-
-        #plot-graph button:hover {
-            background-color: #e45ba0;
-        }
-
-        /* Секция "Дифференцирование функции" */
-        #differentiate-function {
-            background-color: #f4ffcc;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-
-        #differentiate-function button {
-            background-color: #ccff66;
-            color: black;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px;
-            transition: background-color 0.3s ease;
-        }
-
-        #differentiate-function button:hover {
-            background-color: #c4e65a;
-        }
-
-        /* Секция "Вычислить интеграл" */
-        #compute-integral {
-            background-color: #ffe6f0;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-
-        #compute-integral button {
-            background-color: #ff66b3;
-            color: white;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px;
-            transition: background-color 0.3s ease;
-        }
-
-        #compute-integral button:hover {
-            background-color: #e45ba0;
-        }
-
-        /* Секция "Настройки фабрики" */
-        #factory-settings {
-            background-color: #f4ffcc;
-            padding-left: 40px;
-            text-align: left;
-            padding-top: 70px;
-            font-family: Tahoma, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-
-        #factory-settings button {
-            background-color: #ccff66;
-            color: black;
-            width: 150px;
-            height: 50px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            position: absolute;         /* Абсолютное позиционирование */
-            bottom: 70px;               /* Отступ снизу */
-            right: 70px;
-            transition: background-color 0.3s ease;
-        }
-
-        #factory-settings button:hover {
-            background-color: #c4e65a;
-        }
-
-        #settingsModal{
-            background-color: #2e2e2e;
-            border-radius: 25px;
-            border: none;
-            width: 680px;
-            height: 40px;
-            font-weight: bold;
-            font-size: 16px;
-            font-family: Tahoma, sans-serif;
-            color: #ccff66;
-        }
-
-        #factoryType{
-            width: 250px;
-            height: 40px;
-            border-radius: 25px;
-            margin-left: 5px;
-            margin-right: 10px;
-            border: none;
-            background-color: #f0ffd4; /* Светло-зеленый фон */
-            font-family: Tahoma, sans-serif;
-            font-size: 14px;
-            padding-left: 10px;
-            outline: none; /* Убираем обводку при фокусе */
-            box-shadow: none;
-            -webkit-appearance: none; /* Убирает стандартную стрелку в Chrome, Safari */
-            -moz-appearance: none; /* Убирает стандартную стрелку в Firefox */
-            appearance: none; /* Убирает стандартную стрелку в современных браузерах */
-            background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 6"%3E%3Cpath d="M0 0l5 6 5-6z" fill="%23000000"/%3E%3C/svg%3E'); /* Своя стрелка */
-            background-repeat: no-repeat;
-            background-position: right 10px center; /* Стрелка справа по центру */
-            padding-right: 30px;
-            background-size: 11px;
-        }
-
-        #submit{
-            width: 110px;
-            height: 40px;
-            font-family: Tahoma, sans-serif;
-            font-weight: bold;
-            font-size: 14px;
-            border-radius: 25px;
-            background-color: #ccff66;
-            border: none;
-            margin-right: 5px;
-            color: black;
-        }
-
-        #button{
-            width: 110px;
-            height: 40px;
-            font-family: Tahoma, sans-serif;
-            font-weight: bold;
-            font-size: 14px;
-            border-radius: 25px;
-            background-color: #ff66b3;
-            border: none;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/home.css}"/>
 </head>
 <body>
 <div class="main-container">
