--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/static/css/home.css
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/static/css/home.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: 35% 35% 30%; /* Соотношение ширины столбцов */
     gap: 8px;
-    grid-template-rows: 300px;
+    grid-template-rows: 345px;
 }
 
 /* Нижняя строка */
@@ -18,7 +18,7 @@
     display: grid;
     grid-template-columns: 40% 30% 30%; /* Другое соотношение ширины столбцов */
     gap: 8px;
-    grid-template-rows: 300px;
+    grid-template-rows: 345px;
 }
 
 /* Общие стили для ячеек */
@@ -37,7 +37,7 @@
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 
@@ -46,9 +46,9 @@
 #basic-operations button {
     background-color: #ff66b3;
     color: white;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -56,7 +56,12 @@
     cursor: pointer;
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
-    right: 70px;                /* Отступ справа */
+    right: 70px; /* Отступ справа */
+    transition: background-color 0.3s ease;
+}
+
+#basic-operations button:hover {
+    background-color: #e45ba0;
 }
 
 /* Секция "Создание сложной функции" */
@@ -66,7 +71,7 @@
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 }
@@ -74,9 +79,9 @@
 #complex-function button {
     background-color: #ff9933;
     color: white;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -85,6 +90,11 @@
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
     right: 70px;
+    transition: background-color 0.3s ease;
+}
+
+#complex-function button:hover {
+    background-color: #df872d;
 }
 
 /* Секция "Построение графика" */
@@ -94,17 +104,17 @@
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 }
 
 #plot-graph button {
-    background-color: #ff5c8a;
+    background-color: #ff66b3;
     color: white;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -113,15 +123,21 @@
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
     right: 70px;
+    transition: background-color 0.3s ease;
+}
+
+#plot-graph button:hover {
+    background-color: #e45ba0;
 }
 
 /* Секция "Дифференцирование функции" */
 #differentiate-function {
+    background-color: #f4ffcc;
     padding-left: 40px;
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 }
@@ -129,9 +145,9 @@
 #differentiate-function button {
     background-color: #ccff66;
     color: black;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -140,6 +156,11 @@
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
     right: 70px;
+    transition: background-color 0.3s ease;
+}
+
+#differentiate-function button:hover {
+    background-color: #c4e65a;
 }
 
 /* Секция "Вычислить интеграл" */
@@ -149,7 +170,7 @@
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 }
@@ -157,9 +178,9 @@
 #compute-integral button {
     background-color: #ff66b3;
     color: white;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -168,6 +189,11 @@
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
     right: 70px;
+    transition: background-color 0.3s ease;
+}
+
+#compute-integral button:hover {
+    background-color: #e45ba0;
 }
 
 /* Секция "Настройки фабрики" */
@@ -177,7 +203,7 @@
     text-align: left;
     padding-top: 70px;
     font-family: Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 25px;
 }
@@ -185,9 +211,9 @@
 #factory-settings button {
     background-color: #ccff66;
     color: black;
-    width: 135px;
-    height: 45px;
-    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
     font-weight: bold;
     padding: 10px 20px;
     border: none;
@@ -196,4 +222,69 @@
     position: absolute;         /* Абсолютное позиционирование */
     bottom: 70px;               /* Отступ снизу */
     right: 70px;
+    transition: background-color 0.3s ease;
+}
+
+#factory-settings button:hover {
+    background-color: #c4e65a;
+}
+
+#settingsModal{
+    background-color: #2e2e2e;
+    border-radius: 25px;
+    border: none;
+    width: 680px;
+    height: 40px;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: Tahoma, sans-serif;
+    color: #ccff66;
+}
+
+#factoryType{
+    width: 250px;
+    height: 40px;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-right: 10px;
+    border: none;
+    background-color: #f0ffd4; /* Светло-зеленый фон */
+    font-family: Tahoma, sans-serif;
+    font-size: 14px;
+    padding-left: 10px;
+    outline: none; /* Убираем обводку при фокусе */
+    box-shadow: none;
+    -webkit-appearance: none; /* Убирает стандартную стрелку в Chrome, Safari */
+    -moz-appearance: none; /* Убирает стандартную стрелку в Firefox */
+    appearance: none; /* Убирает стандартную стрелку в современных браузерах */
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 6"%3E%3Cpath d="M0 0l5 6 5-6z" fill="%23000000"/%3E%3C/svg%3E'); /* Своя стрелка */
+    background-repeat: no-repeat;
+    background-position: right 10px center; /* Стрелка справа по центру */
+    padding-right: 30px;
+    background-size: 11px;
+}
+
+#submit{
+    width: 110px;
+    height: 40px;
+    font-family: Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    border-radius: 25px;
+    background-color: #ccff66;
+    border: none;
+    margin-right: 5px;
+    color: black;
+}
+
+#button{
+    width: 110px;
+    height: 40px;
+    font-family: Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    border-radius: 25px;
+    background-color: #ff66b3;
+    border: none;
+    color: white;
 }
