--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
@@ -81,7 +81,7 @@
         border: none;
         border-radius: 25px;
         width: 400px;
-        height: 230px;
+        height: auto;
         z-index: 1001;
         position: fixed;
         top: 50%;
@@ -91,8 +91,8 @@
       #closeButtomCreateFunction{
         text-align: center;
         position: absolute;
-        right: 20px;
-        bottom: 20px;
+        right: 23px;
+        bottom: 22px;
         background-color: #ff66b3;
         color: white;
         font-family: Tahoma, sans-serif;
@@ -100,8 +100,14 @@
         font-size: 14px;
         border: none;
         border-radius: 25px;
-        height: 40px;
-        width: 150px;
+        height: 35px;
+        width: 130px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      #closeButtomCreateFunction:hover {
+        background-color: #e45ba0;
       }
 
       #modalFunction {
