--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
@@ -82,10 +82,12 @@
         border-radius: 25px;
         width: 400px;
         height: auto;
+        max-height: 60%;
         z-index: 1001;
         position: fixed;
         top: 50%;
         left: 50%;
+        overflow-y: auto;
       }
 
       #closeButtomCreateFunction{
