--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <style>
+    </style>
+</head>
+<body>
 <div>
     <form id="createFunctionForm" action="/tabulated-operations/createFunction" method="post">
         <input type="hidden" name="target" th:value="${target}" id="targetField">
         <input type="hidden" name="redirectTarget" th:value="${redirectTarget}" id="redirectTargetField">
         <p th:text="${target}"></p>
-        <table>
+        <table id="tableXYforCreate">
             <tr>
                 <th>X</th>
                 <th>Y</th>
@@ -16,4 +24,6 @@
         <button type="submit">Создать пупу</button>
     </form>
 </div>
+</body>
+</html>
 
