--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/graph.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/graph.html
@@ -37,7 +37,9 @@
     <button onclick="openRemove('graph','graph')" th:attr="disabled=${graphFunc == null or countGraph == 2 }">Удалить точку</button>
 
 </div>
-
+<div>
+    <form
+</div>
 <div id="functionGraphContainer">
     <canvas id="functionGraph"></canvas>
 </div>
