--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/functionsModalForms.html
@@ -165,6 +165,30 @@
       <input type="text" name="funcName" id="funcName" required>
       <button type="submit">Cохранить</button>
     </form>
+
+    <button id="saveBtn">Сохранить файл</button>
+
+    <script>
+      // Функция для создания и скачивания файла
+      document.getElementById('saveBtn').addEventListener('click', function() {
+        // Данные для файла
+        const fileContent = 'Это текст файла, который будет сохранен.';
+        const blob = new Blob([fileContent], { type: 'text/plain' });
+
+        // Создаем ссылку для скачивания
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'example.txt';  // Указываем имя файла, который будет сохранен
+
+        // Программно кликаем по ссылке, чтобы инициировать скачивание
+        a.click();
+
+        // Освобождаем объект URL после использования
+        URL.revokeObjectURL(url);
+      });
+    </script>
+
   </div>
   <button onclick="closeSave()">Закрыть</button>
 </div>
