--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -85,7 +85,7 @@
             background-color: #e45ba0;
         }
 
-        button[disabled] {
+        #operand1Content button[disabled] {
             background-color: #cf8cb0; /* Серый фон для заблокированной кнопки */
             color: #ededed; /* Тусклый цвет текста */
             cursor: not-allowed; /* Указатель меняется на запрещающий значок */
@@ -93,12 +93,129 @@
             border: none; /* Серый цвет рамки */
         }
 
-        button[disabled]:hover {
+        #operand2Content button[disabled] {
+            background-color: #cf8cb0; /* Серый фон для заблокированной кнопки */
+            color: #ededed; /* Тусклый цвет текста */
+            cursor: not-allowed; /* Указатель меняется на запрещающий значок */
+            opacity: 0.6; /* Прозрачность для эффекта */
+            border: none; /* Серый цвет рамки */
+        }
+
+        #operand1Content button[disabled]:hover {
             background-color: #cf8cb0;
             color: #ededed;
             border-color: #aaa;
         }
 
+        #operand2Content button[disabled]:hover {
+            background-color: #cf8cb0;
+            color: #ededed;
+            border-color: #aaa;
+        }
+
+        #resultContainer{
+            background-color: #ffe0b3;
+            border-radius: 25px;
+            height: 100%;
+            min-height: 94vh;
+            text-align: center;
+        }
+
+        #result1Title{
+            font-weight: bold;
+            font-size: 27px;
+            font-family: Tahoma, sans-serif;
+            margin-bottom: 30px;
+            margin-top: 55px;
+        }
+
+        #resultLabel{
+            font-family: Tahoma, sans-serif;
+            font-size: 17px;
+            font-weight: bolder;
+            float: left;
+            margin-bottom: 10px;
+            color: #2e2e2e;
+            margin-left: 107px;
+        }
+
+        #operation{
+            border-radius: 25px;
+            border: none;
+            width: 55%;
+            height: 45px;
+            margin-left: 5px;
+            margin-right: 10px;
+            background-color: white;
+            font-family: Tahoma, sans-serif;
+            font-size: 15px;
+            padding-left: 20px;
+            padding-right: 15px;
+            outline: none; /* Убираем обводку при фокусе */
+            box-shadow: none;
+            -webkit-appearance: none; /* Убирает стандартную стрелку в Chrome, Safari */
+            -moz-appearance: none; /* Убирает стандартную стрелку в Firefox */
+            appearance: none; /* Убирает стандартную стрелку в современных браузерах */
+            background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 6"%3E%3Cpath d="M0 0l5 6 5-6z" fill="%23000000"/%3E%3C/svg%3E'); /* Своя стрелка */
+            background-repeat: no-repeat;
+            background-position: right 10px center; /* Стрелка справа по центру */
+            background-size: 11px;
+            margin-bottom: 10px;
+        }
+
+        #resultButton{
+            width: 55%;
+            height: 45px;
+            background-color: #ff9d37;
+            color: #ffffff;
+            font-weight: bold;
+            font-family: Tahoma, sans-serif;
+            font-size: 15px;
+            border-radius: 25px;
+            border: none;
+            text-align: center;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-bottom: 10px;
+        }
+
+        #resultButton:hover {
+            background-color: #df872d;
+        }
+
+        #resultContent button{
+            width: 55%;
+            height: 45px;
+            background-color: #ff9d37;
+            color: #ffffff;
+            font-weight: bold;
+            font-family: Tahoma, sans-serif;
+            font-size: 15px;
+            border-radius: 25px;
+            border: none;
+            text-align: center;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-bottom: 10px;
+        }
+
+        #resultContent button:hover {
+            background-color: #df872d;
+        }
+
+        #resultContent button[disabled] {
+            background-color: #a37556; /* Серый фон для заблокированной кнопки */
+            color: #ededed; /* Тусклый цвет текста */
+            cursor: not-allowed; /* Указатель меняется на запрещающий значок */
+            opacity: 0.6; /* Прозрачность для эффекта */
+            border: none; /* Серый цвет рамки */
+        }
+
+        #resultContent button[disabled]:hover {
+            background-color: #a37556;
+            color: #ededed;
+            border-color: #aaa;
+        }
     </style>
 </head>
 <body>
@@ -167,11 +284,11 @@
     </div>
     <div id="resultContainer">
         <!-- Результат сложения -->
-        <h3>Результат</h3>
+        <h3 id="result1Title">Результат</h3>
         <div>
             <form action="/tabulated-operations/doOperation" method="post">
                 <div class="operation-selector">
-                    <label for="operation">Выберите операцию:</label>
+                    <label for="operation" id="resultLabel">Выберите операцию:</label>
                     <select id="operation" name="operation" required>
                         <option value="add">Сложение</option>
                         <option value="subtract">Вычитание</option>
@@ -179,7 +296,7 @@
                         <option value="divide">Деление</option>
                     </select>
                 </div>
-                <button type="submit">Выполнить</button>
+                <button type="submit" id="resultButton">Выполнить</button>
             </form>
         </div>
 
@@ -203,7 +320,7 @@
                 </table>
             </div>
             <div th:if="${resultFunc == null}">
-                <p>Отсутствует функция</p>
+                <p>Функция отсутствует</p>
             </div>
         </div>
     </div>
